<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewsActivity"
    android:padding="5dp"
    android:background="@color/BackNews"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/NEWS"
        android:textSize="11pt"
        android:textAlignment="center"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:id="@+id/allNews"
            android:background="@color/BackNewsButtCat"
            android:text="@string/All"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:id="@+id/currNews"
            android:background="@color/BackNewsButtCat"
            android:text="@string/Currency"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:id="@+id/promNews"
            android:background="@color/BackNewsButtCat"
            android:text="@string/Promotions"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:id="@+id/bonNews"
            android:background="@color/BackNewsButtCat"
            android:text="@string/Bonds"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:id="@+id/worldNews"
            android:background="@color/BackNewsButtCat"
            android:text="@string/World_News"/>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="dsdsd"
        android:textAlignment="textEnd"
        android:id="@+id/newsCat"
        android:layout_marginTop="5dp"
        android:layout_marginRight="5dp"
        android:textColor="@color/BackNewsTextCat"/>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_marginTop="5dp"
        android:layout_height="match_parent"
        app:layoutManager="LinearLayoutManager"
        android:id="@+id/NewsList" />

</LinearLayout>